--- a/src/index.css
+++ b/src/index.css
@@ -43,7 +43,7 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #e0b9b9;
+  background-color: #4687f1;
   cursor: pointer;
   transition: border-color 0.25s;
 }
